--- a/07-2fa/package.json
+++ b/07-2fa/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "qrcode": "^1.4.1",
     "qrcode-terminal": "^0.12.0",
     "speakeasy": "^2.0.0"
